--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 /sveltebase/node_modules/
 /sveltebase/public/build/
+/sveltebase/public/*.css
+/sveltebase/public/*.js
 /node_modules/
 /public/build/
+/public/*.css
 
 .DS_Store
 sveltebase/package-lock.json
