--- a/sveltebase/package.json
+++ b/sveltebase/package.json
@@ -26,6 +26,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.4",
     "sirv-cli": "^1.0.0"
   }
 }
